# Notetaking

./: .gitignore
experiments/html_canvas/: index.html  index2.html
experiments/layered_window/: Cargo.toml
experiments/layered_window/src/: main.rs
experiments/layered_window/src/util/: fill.rs
experiments/layered_window_2_cpp/: CMakeLists.txt  main.cpp
experiments/layered_window_3_cpp/: CMakeLists.txt  main.cpp
experiments/layered_window_composition_cpp/: CMakeLists.txt  main.cpp
experiments/layered_window_composition_rust/: Cargo.toml
experiments/layered_window_composition_rust/src/: main.rs
experiments/layered_window_cpp/: CMakeLists.txt  main.cpp
experiments/layered_window_last_cpp/: CMakeLists.txt  main.cpp
experiments/layered_window_manual_cpp/: CMakeLists.txt  main.cpp
experiments/layered_window_with_privileges/LayeredWindowWithPrivileges/: LayeredWindowWithPrivileges.sln
experiments/layered_window_with_privileges/LayeredWindowWithPrivileges/LayeredWindowWithPrivileges/: LayeredWindowWithPrivileges.cpp  LayeredWindowWithPrivileges.rc  LayeredWindowWithPrivileges.vcxproj  LayeredWindowWithPrivileges.vcxproj.filters  Resource.h
experiments/microsoft.web.webview2.1.0.3230-prerelease/: .signature.p7s  Microsoft.Web.WebView2.nuspec  WebView2Experimental.idl  WebView2Experimental.tlb
experiments/microsoft.web.webview2.1.0.3230-prerelease/_rels/: .rels
experiments/microsoft.web.webview2.1.0.3230-prerelease/lib/: Microsoft.Web.WebView2.Core.winmd
experiments/microsoft.web.webview2.1.0.3230-prerelease/lib_manual/netcoreapp3.0/: Microsoft.Web.WebView2.Core.xml
experiments/microsoft.web.webview2.1.0.3230-prerelease/tools/wv2winrt/: winrt_winmd.winmd
experiments/stylus_logger/src/: main.rs
experiments/windows_mvc/: Cargo.toml
experiments/windows_mvc/hover_core/: Cargo.toml
experiments/windows_mvc/hover_core/src/: controller.rs  model.rs
experiments/windows_mvc/hover_win32/: Cargo.toml
experiments/windows_mvc/hover_win32/src/: main.rs  win.rs
experiments/windows_mvc/src/: controller.rs  main.rs  model.rs  win.rs
stylus_logger/: Cargo.toml
stylus_logger/src/: main.rs
