[package]
name = "hover_win32"
version = "0.1.0"
edition = "2024"

[dependencies]
hover_core = { workspace = true }

windows-numerics = "0.2.0"

anyhow = "1"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Pointer",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
]

